#774 und Bildhover/focus nochmal verbessert

--- a/src/sass/structure/content/_grid.scss
+++ b/src/sass/structure/content/_grid.scss
@@ -63,10 +63,10 @@
 	     padding-left: $grid-gutter-width;
 	 }
 	 @media (min-width: $screen-md) {
-	     max-width: $container-md - $subnav-width-sm - $grid-gutter-width;
+	     max-width: $container-md - $subnav-width-md - $grid-gutter-width;
 	 }
 	 @media (min-width: $screen-lg) {
-	     max-width: $container-lg - $subnav-width-sm - $grid-gutter-width;
+	     max-width: $container-lg - $subnav-width-lg - $grid-gutter-width;
 	 }
     }
     
