bugfix feste px angaben bei timeline und accordion toggle

--- a/src/sass/plugins/_rrze-elements.scss
+++ b/src/sass/plugins/_rrze-elements.scss
@@ -304,6 +304,6 @@ button.expand-all {
 /* Timeline
 /*-----------------------------------------------------------------------------------*/
 
-.content [id^="timeline"] .issues li p:not(.wp-caption-text) {
+#content [id^="timeline"] .issues li p:not(.wp-caption-text) {
     @include px2rem($font-size-base);
 }
