--- a/src/sass/elements/_tables.scss
+++ b/src/sass/elements/_tables.scss
@@ -157,6 +157,38 @@ table {
 	    }
 	}
 	
+	thead {
+	    td {
+		background: $colorContentBorders;
+	    }
+	}
+	
+	th.small,
+	td.small {
+	    font-size: 0.8rem;
+	}
+	
+	td.center, 
+	th.center {
+	    text-align: center;
+	}
+	tr.center {
+	    td, th {
+		 text-align: center;
+	    }
+	}
+	td.right, 
+	th.right {
+	    text-align: right;
+	}
+	tr.right {
+	    td, th {
+		text-align: right;
+	    }
+	}
+	
+	
+	
 }
 .sorttable {
 	    th::after {
